--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Dany",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dany-LF/KahootFlooder/"
+  },
+  "author": "Dany-LF",
   "license": "MIT",
   "dependencies": {
     "colors": "^1.4.0",
